...
    }

    fun validateInputs(): Boolean {
        val state = _uiState.value
        return when {
            state.name.isEmpty() -> {
                _uiState.value = state.copy(signUpError = "Name cannot be empty")
                false
            }
            state.username.isEmpty() -> {
                _uiState.value = state.copy(signUpError = "Email cannot be empty")
                false
            }
...
